[tool.poetry]
name = "datayoga-core"
version = "0.0.0"
description = "DataYoga for Python"
authors = ["DataYoga <admin@datayoga.io>"]
license = "Apache-2.0"
readme = "README.md"
include = [
]

classifiers = [
        'Development Status :: 4 - Beta',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: Apache Software License',
        'Programming Language :: Python :: 3.7',
        'Topic :: Database'
]

[tool.poetry.dependencies]
certifi = "^2022.12.7"
click = "^8.0.3"
cryptography = "^38.0.4"
jmespath = "^1.0.0"
jsonschema = "^4.4.0"
python = "^3.7"
PyYAML = "^6.0"

mock = { version = "^4.0.3", optional = true }
pytest = { version = "^7.1.2", optional = true }
pytest-asyncio = { version = "^0.20.2", optional = true }
pytest-describe = { version = "^2.0.1", optional = true }
pytest-mock = { version = "^3.7.0", optional = true }
pytest-timeout = { version = "^2.1.0", optional = true }
requests-mock = { version = "^1.9.3", optional = true }
testcontainers = { version = "^3.7.0", optional = true }

cassandra-driver = { version = "^3.25.0", optional = true }
psycopg2-binary = { version="^2.9.5", optional = true}
pymssql = { version="^2.2.7", optional = true }
PyMySQL = { version="^1.0.2", optional = true }
redis = { version = "^4.3.5", optional = true }
SQLAlchemy = { version = "^1.4.44", optional = true }

[tool.poetry.extras]
cassandra = ["cassandra-driver"]
mssql = ["pymssql", "SQLAlchemy"]
mysql = ["PyMySQL", "SQLAlchemy"]
pg = ["psycopg2-binary","SQLAlchemy"]
redis = ["redis"]
test = [
        "cassandra-driver",
        "mock",
        "psycopg2-binary",
        "pymssql",
        "PyMySQL",
        "pytest",
        "pytest-asyncio",
        "pytest-describe",
        "pytest-mock",
        "pytest-timeout",
        "redis",
        "requests-mock",
        "SQLAlchemy",
        "testcontainers"
]

[tool.poetry.urls]
url = "https://datayoga.io"
[tool.poetry.scripts]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
